--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "rxjs": "^5.0.0-beta.6"
   },
   "dependencies": {
+    "apollo-client-rxjs": "^0.0.1",
     "lodash.assign": "^4.0.9",
     "lodash.forin": "^4.2.0",
-    "lodash.isequal": "^4.2.0",
-    "lodash.omit": "^4.4.1"
+    "lodash.isequal": "^4.2.0"
   },
   "devDependencies": {
     "@angular/common": "^2.0.0-rc.5",
@@ -65,7 +65,7 @@
     "rimraf": "^2.5.2",
     "rxjs": "5.0.0-beta.6",
     "tslint": "^3.7.4",
-    "typescript": "^1.8.10",
+    "typescript": "^2.0.0",
     "typings": "^1.3.1",
     "validate-commit-msg": "^2.6.1",
     "webpack": "^1.13.0",
